--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,8 +11,11 @@ spring:
       hibernate:
 #        show_sql: true
         format_sql: true
+        default_batch_fetch_size: 100
+  h2:
+    console:
+      enabled: true
 logging:
   level:
     org.hibernate.SQL: debug
     org.hibernate.type: trace
-
